# dfr-browser2

./: .gitignore  README.md  main.py  notes.md  pyproject.toml  test_notebook.ipynb
demo/data/: diagnostics.xml  doc-topic-counts.csv  metadata.csv  topic-keys.txt  topic_coords.csv
demo/js/: bibliography.js  document.js  main.js  state-utils.js  topic.js
docs/: config.json  index.html
docs/css/: style.css
docs/data/: bibliography.json  diagnostics.json  doc-lengths.txt  doc-topic.txt  metadata.csv  topic_coords_12.csv  tw.json  wos_core_article_titles.csv  wos_core_article_titles.xlsx
docs/js/: about.js  cached-data-loader.js  main.js  overview.js  wordlist.js
src/: config.json  index.html  package-lock.json  package.json
src/css/: Design.md  style.css
src/data/: metadata.csv  topic-keys.txt
src/docs/: CACHE_MANAGEMENT_UPDATE.md  CACHING.md  ERROR_HANDLING.md  ERROR_HANDLING_IMPLEMENTATION.md  TOPIC_CUSTOMIZATION.md  VISUAL_CHANGES.md  hosting.md  suggested_additional_functionality.md
src/js/: diagnostics.js  document.js  main.js  overview.js  topic.js
src/tests/: cache-test.html  citation-test.html
src/tests/python/: test_create_bibliography.py  test_prepare_data.py  test_prepare_dfr_data.py
