[project]
name = "dfr-browser2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "citeproc-py>=0.9.0",
    "citeproc-py-styles>=0.1.5",
    "nameparser>=1.1.3",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
]
